Tue May 29 11:57:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Qos_Helper.h:
          Fixed typo

Tue May 29 09:25:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
          Added missing after

Tue May 29 09:20:58 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * bin/dcps_tests.lst:

        * tests/DCPS/RegisterInstance:

        * tests/DCPS/RegisterInstance/register_instance.mpc:
        * tests/DCPS/RegisterInstance/register_instance.cpp:
        * tests/DCPS/RegisterInstance/rtps_disc.ini:
        * tests/DCPS/RegisterInstance/run_test.pl:
          Added new test. This explicitly test the register_instance
          method on the DataWriter. It also tests whether an instance
          is implicitly created when a sample with an unknown instance
          is written to DDS.

Fri May 25 09:47:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Use gen_ostream as base project. With this feature the tao_idl
          generates ostream insertion operators which can be used to stream
          any idl defined type into an ostream. Going to use this in dds4ccm
          to log the full qos we set to OpenDDS

Fri May 25 07:11:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/CompatibilityTest/run_test.pl:
          Added another set of incompatible QoS settings to test

        * tests/DCPS/CompatibilityTest/subscriber.cpp:
          Fixed typo

Thu May 24 18:29:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
          Added Deadline test with rtps_disc

        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/Deadline/subscriber.cpp:
          Updated domain id in order to run with rtps

Thu May 24 18:19:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/Deadline/rtps_disc.ini:
          Added ini file which I forgot
