@@ -134,7 +134,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
             } else {
               ACE_ERROR_RETURN((LM_ERROR,
                                 ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                                ACE_TEXT("missing transport_type in [transport/%s] section.\n"),
+                                ACE_TEXT("missing transport_type in [transport/%C] section.\n"),
                                 transport_id.c_str()),
                                -1);
             }
@@ -146,7 +146,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
             if (inst == 0) {
               ACE_ERROR_RETURN((LM_ERROR,
                                 ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                                ACE_TEXT("Unable to create transport instance in [transport/%s] section.\n"),
+                                ACE_TEXT("Unable to create transport instance in [transport/%C] section.\n"),
                                 transport_id.c_str()),
                                -1);
             }
@@ -155,7 +155,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
           } else {
             ACE_ERROR_RETURN((LM_ERROR,
                               ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                              ACE_TEXT("missing transport_type in [transport/%s] section.\n"),
+                              ACE_TEXT("missing transport_type in [transport/%C] section.\n"),
                               transport_id.c_str()),
                              -1);
           }
@@ -200,7 +200,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
           if (config == 0) {
             ACE_ERROR_RETURN((LM_ERROR,
                               ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                              ACE_TEXT("Unable to create transport config in [config/%s] section.\n"),
+                              ACE_TEXT("Unable to create transport config in [config/%C] section.\n"),
                               config_id.c_str()),
                              -1);
           }
@@ -228,7 +228,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
               } else if ((value != "0") && (value != "false")) {
                 ACE_ERROR_RETURN((LM_ERROR,
                                   ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                                  ACE_TEXT("Illegal value for swap_bytes (%s) in [config/%s] section.\n"),
+                                  ACE_TEXT("Illegal value for swap_bytes (%C) in [config/%C] section.\n"),
                                   value.c_str(), config_id.c_str()),
                                  -1);
               }
@@ -238,14 +238,14 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
                                     config->passive_connect_duration_)) {
                 ACE_ERROR_RETURN((LM_ERROR,
                                   ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                                  ACE_TEXT("Illegal integer value for passive_connect_duration (%s) in [config/%s] section.\n"),
+                                  ACE_TEXT("Illegal integer value for passive_connect_duration (%s) in [config/%C] section.\n"),
                                   value.c_str(), config_id.c_str()),
                                  -1);
               }
             } else {
               ACE_ERROR_RETURN((LM_ERROR,
                                 ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                                ACE_TEXT("Unexpected entry (%s) in [config/%s] section.\n"),
+                                ACE_TEXT("Unexpected entry (%C) in [config/%C] section.\n"),
                                 name.c_str(), config_id.c_str()),
                                -1);
             }
@@ -253,7 +253,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
           if (configInfo.second.size() == 0) {
             ACE_ERROR_RETURN((LM_ERROR,
                               ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                              ACE_TEXT("No transport instances listed in [config/%s] section.\n"),
+                              ACE_TEXT("No transport instances listed in [config/%C] section.\n"),
                               config_id.c_str()),
                              -1);
           }
@@ -278,7 +278,7 @@ TransportRegistry::load_transport_configuration(const std::string& file_name,
       if (inst == 0) {
         ACE_ERROR_RETURN((LM_ERROR,
                           ACE_TEXT("(%P|%t) TransportRegistry::load_transport_configuration: ")
-                          ACE_TEXT("The inst (%s) in [config/%s] section is undefined.\n"),
+                          ACE_TEXT("The inst (%C) in [config/%C] section is undefined.\n"),
                           insts[j].c_str(), config->name().c_str()),
                          -1);
       }
