@@ -1,3 +1,9 @@
+Tue May 29 13:56:46 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportRegistry.cpp:
+
+          Use proper ACE Logging formatting characters (%C vs %s).
+
 Tue May 29 11:57:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dds/DCPS/Qos_Helper.h:
